Rename to flux-cards. Gamelogic

--- a/flux-cards-dev.html
+++ b/flux-cards-dev.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Flux test example</title>
-        <link rel="stylesheet" href="./css/flux-test.css"/>
+        <link rel="stylesheet" href="./css/flux-cards.css"/>
     </head>
     <body>
-        <section id="flux-test"/>
+        <section id="flux-cards"/>
         <script src="https://fb.me/react-15.1.0.js"></script>
         <script src="https://fb.me/react-dom-15.1.0.js"></script>
-        <script src="./js-build/install-root/bin/flux-test.jsexe/all.js"></script>
+        <script src="./js-build/install-root/bin/flux-cards.jsexe/all.js"></script>
     </body>
 </html>
