Renamed project fluxette

--- a/fluxette-dev.html
+++ b/fluxette-dev.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Flux test example</title>
-        <link rel="stylesheet" href="./css/flux-cards.css"/>
+        <link rel="stylesheet" href="./css/fluxette.css"/>
     </head>
     <body>
-        <section id="flux-cards"/>
+        <section id="fluxette"/>
         <script src="https://fb.me/react-15.1.0.js"></script>
         <script src="https://fb.me/react-dom-15.1.0.js"></script>
-        <script src="./js-build/install-root/bin/flux-cards.jsexe/all.js"></script>
+        <script src="./js-build/install-root/bin/fluxette.jsexe/all.js"></script>
     </body>
 </html>
