--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <section id="fluxette"/>
         <script src="https://fb.me/react-15.1.0.js"></script>
         <script src="https://fb.me/react-dom-15.1.0.js"></script>
-        <script src="./js-build/install-root/bin/fluxette.jsexe/all.js"></script>
+        <script src="./github.js"></script>
     </body>
 </html>
